--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
             color: #fff;
             overflow-x: hidden;
         }
-        
-        /* Header and Navigation */
+
         header {
             background: #111;
             padding: 20px 0;
@@ -28,25 +27,6 @@
             margin: 0;
         }
 
-        nav {
-            text-align: center;
-            margin-top: 10px;
-        }
-
-        nav a {
-            color: #fff;
-            font-size: 16px;
-            margin: 0 15px;
-            text-decoration: none;
-            text-transform: uppercase;
-            padding: 10px;
-        }
-
-        nav a:hover {
-            color: #ff9900;
-        }
-
-        /* Search Bar */
         .search-container {
             text-align: center;
             margin-top: 50px;
@@ -79,44 +59,30 @@
             background-color: #ff6600;
         }
 
-        /* Anime Grid */
-        .anime-list {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            margin-top: 30px;
-        }
-
-        .anime-card {
-            width: 220px;
-            margin: 15px;
-            background-color: #222;
-            border-radius: 10px;
-            overflow: hidden;
-            box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
-            transition: transform 0.3s ease;
-        }
-
-        .anime-card:hover {
-            transform: scale(1.05);
-        }
-
-        .anime-card img {
-            width: 100%;
-            height: 320px;
-            object-fit: cover;
-        }
-
-        .anime-card h3 {
-            background-color: #ff9900;
-            padding: 10px;
+        .anime-details {
             text-align: center;
-            font-size: 18px;
-            color: #222;
-            margin: 0;
+            margin-top: 40px;
         }
 
-        /* Footer */
+        .anime-details img {
+            width: 300px;
+            height: 450px;
+            object-fit: cover;
+            border-radius: 8px;
+        }
+
+        .anime-details h3 {
+            font-size: 24px;
+            color: #ff9900;
+            margin: 20px 0;
+        }
+
+        .anime-details p {
+            font-size: 18px;
+            line-height: 1.6;
+            color: #ccc;
+        }
+
         footer {
             text-align: center;
             background-color: #111;
@@ -127,50 +93,12 @@
             width: 100%;
             bottom: 0;
         }
-
-        /* Snowfall */
-        body {
-            position: relative;
-        }
-
-        .snowflake {
-            position: absolute;
-            top: -10px;
-            width: 10px;
-            height: 10px;
-            background-color: #fff;
-            border-radius: 50%;
-            animation: fall 5s infinite linear;
-        }
-
-        @keyframes fall {
-            to {
-                transform: translateY(100vh);
-            }
-        }
-
-        .snowflake:nth-child(odd) {
-            animation-duration: 7s;
-            left: calc(100% * (var(--random-x) + 1) / 5);
-        }
-
-        .snowflake:nth-child(even) {
-            animation-duration: 6s;
-            left: calc(100% * (var(--random-x) + 1) / 6);
-        }
     </style>
 </head>
 <body>
 
 <header>
     <h1>Anime Wallah</h1>
-    <nav>
-        <a href="#">Home</a>
-        <a href="#">Latest</a>
-        <a href="#">Genres</a>
-        <a href="#">Movies</a>
-        <a href="#">Trending</a>
-    </nav>
 </header>
 
 <div class="search-container">
@@ -178,8 +106,8 @@
     <button onclick="searchAnime()">Search</button>
 </div>
 
-<div class="anime-list" id="anime-list">
-    <!-- Anime cards will go here -->
+<div class="anime-details" id="anime-details">
+    <!-- Anime details will be displayed here -->
 </div>
 
 <footer>
@@ -187,59 +115,34 @@
 </footer>
 
 <script>
-    // Example of fetching anime data (replace with actual API call)
-    function searchAnime() {
-        var animeName = document.getElementById("anime-name").value;
+    async function searchAnime() {
+        const animeName = document.getElementById("anime-name").value;
+        if (animeName === '') {
+            alert("Please enter an anime name!");
+            return;
+        }
 
-        // Placeholder example (replace with API data)
-        var exampleData = {
-            anime_name: animeName,
-            download_links: ["#"],
-            screenshots: [
-                "https://via.placeholder.com/220x320?text=Anime+Image"
-            ]
-        };
-        displayAnime(exampleData);
-    }
-
-    // Display Anime Cards
-    function displayAnime(data) {
-        var animeList = document.getElementById("anime-list");
-        animeList.innerHTML = '';
-
-        var animeCard = document.createElement("div");
-        animeCard.classList.add("anime-card");
-
-        var animeTitle = document.createElement("h3");
-        animeTitle.innerText = data.anime_name;
-        animeCard.appendChild(animeTitle);
-
-        data.screenshots.forEach(imgSrc => {
-            var img = document.createElement("img");
-            img.src = imgSrc;
-            animeCard.appendChild(img);
-        });
-
-        var btn = document.createElement("button");
-        btn.innerText = "Download";
-        btn.onclick = () => window.location.href = data.download_links[0];
-        animeCard.appendChild(btn);
-
-        animeList.appendChild(animeCard);
-    }
-
-    // Generate Snowflakes
-    function generateSnowflakes() {
-        for (var i = 0; i < 50; i++) {
-            var snowflake = document.createElement("div");
-            snowflake.classList.add("snowflake");
-            snowflake.style.left = Math.random() * window.innerWidth + "px";
-            snowflake.style.animationDuration = 5 + Math.random() * 5 + "s";
-            document.body.appendChild(snowflake);
+        const response = await fetch(`https://api.jikan.moe/v4/anime?q=${animeName}&limit=1`);
+        const data = await response.json();
+        
+        if (data.data.length > 0) {
+            const anime = data.data[0];
+            displayAnimeDetails(anime);
+        } else {
+            alert("Anime not found!");
         }
     }
 
-    generateSnowflakes();  // Trigger Snowflakes
+    function displayAnimeDetails(anime) {
+        const animeDetails = document.getElementById("anime-details");
+        animeDetails.innerHTML = `
+            <img src="${anime.images.jpg.large_image_url}" alt="${anime.title}">
+            <h3>${anime.title}</h3>
+            <p><strong>Episodes:</strong> ${anime.episodes ? anime.episodes : "N/A"}</p>
+            <p><strong>Rating:</strong> ${anime.rating ? anime.rating : "N/A"}</p>
+            <p><strong>Synopsis:</strong> ${anime.synopsis ? anime.synopsis : "No synopsis available."}</p>
+        `;
+    }
 </script>
 
 </body>
