--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
             background-color: #1b1b1b;
             color: #fff;
             overflow-x: hidden;
+            background: url('https://wallpaperaccess.com/full/30842.jpg') no-repeat center center fixed;
+            background-size: cover;
         }
 
         header {
-            background: #111;
+            background: rgba(0, 0, 0, 0.7);
             padding: 20px 0;
             text-align: center;
             color: #ffcc00;
@@ -93,6 +95,15 @@
             width: 100%;
             bottom: 0;
         }
+
+        .loading-spinner {
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            display: none;
+        }
+
     </style>
 </head>
 <body>
@@ -104,6 +115,10 @@
 <div class="search-container">
     <input type="text" id="anime-name" placeholder="Search for your favorite anime..." />
     <button onclick="searchAnime()">Search</button>
+</div>
+
+<div id="loading-spinner" class="loading-spinner">
+    <div class="loader">Loading...</div>
 </div>
 
 <div class="anime-details" id="anime-details">
@@ -122,26 +137,37 @@
             return;
         }
 
-        const response = await fetch(`https://api.jikan.moe/v4/anime?q=${animeName}&limit=1`);
+        // Show loading spinner while fetching data
+        document.getElementById("loading-spinner").style.display = 'block';
+
+        const response = await fetch(`https://api.jikan.moe/v4/anime?q=${animeName}&limit=5`);
         const data = await response.json();
         
+        document.getElementById("loading-spinner").style.display = 'none';
+
         if (data.data.length > 0) {
-            const anime = data.data[0];
-            displayAnimeDetails(anime);
+            displayAnimeDetails(data.data);
         } else {
             alert("Anime not found!");
         }
     }
 
-    function displayAnimeDetails(anime) {
+    function displayAnimeDetails(animes) {
         const animeDetails = document.getElementById("anime-details");
-        animeDetails.innerHTML = `
-            <img src="${anime.images.jpg.large_image_url}" alt="${anime.title}">
-            <h3>${anime.title}</h3>
-            <p><strong>Episodes:</strong> ${anime.episodes ? anime.episodes : "N/A"}</p>
-            <p><strong>Rating:</strong> ${anime.rating ? anime.rating : "N/A"}</p>
-            <p><strong>Synopsis:</strong> ${anime.synopsis ? anime.synopsis : "No synopsis available."}</p>
-        `;
+        animeDetails.innerHTML = '';
+
+        animes.forEach(anime => {
+            animeDetails.innerHTML += `
+                <div class="anime-card">
+                    <img src="${anime.images.jpg.large_image_url}" alt="${anime.title}">
+                    <h3>${anime.title}</h3>
+                    <p><strong>Episodes:</strong> ${anime.episodes ? anime.episodes : "N/A"}</p>
+                    <p><strong>Rating:</strong> ${anime.rating ? anime.rating : "N/A"}</p>
+                    <p><strong>Synopsis:</strong> ${anime.synopsis ? anime.synopsis : "No synopsis available."}</p>
+                    <button onclick="window.open('${anime.url}', '_blank')">View Details</button>
+                </div>
+            `;
+        });
     }
 </script>
 
