--- a/index.html
+++ b/index.html
@@ -3,173 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Anime Wallah</title>
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #1b1b1b;
-            color: #fff;
-            overflow-x: hidden;
-            background: url('https://wallpaperaccess.com/full/30842.jpg') no-repeat center center fixed;
-            background-size: cover;
-        }
-
-        header {
-            background: rgba(0, 0, 0, 0.7);
-            padding: 20px 0;
-            text-align: center;
-            color: #ffcc00;
-        }
-
-        header h1 {
-            font-size: 40px;
-            text-transform: uppercase;
-            margin: 0;
-        }
-
-        .search-container {
-            text-align: center;
-            margin-top: 50px;
-        }
-
-        .search-container input[type="text"] {
-            padding: 12px;
-            width: 70%;
-            border: 2px solid #ff9900;
-            background-color: #333;
-            color: #fff;
-            border-radius: 5px;
-            font-size: 16px;
-            margin-bottom: 15px;
-        }
-
-        .search-container button {
-            padding: 15px;
-            width: 75%;
-            font-size: 18px;
-            background-color: #ff9900;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-        }
-
-        .search-container button:hover {
-            background-color: #ff6600;
-        }
-
-        .anime-details {
-            text-align: center;
-            margin-top: 40px;
-        }
-
-        .anime-details img {
-            width: 300px;
-            height: 450px;
-            object-fit: cover;
-            border-radius: 8px;
-        }
-
-        .anime-details h3 {
-            font-size: 24px;
-            color: #ff9900;
-            margin: 20px 0;
-        }
-
-        .anime-details p {
-            font-size: 18px;
-            line-height: 1.6;
-            color: #ccc;
-        }
-
-        footer {
-            text-align: center;
-            background-color: #111;
-            padding: 20px;
-            color: #ffcc00;
-            font-size: 14px;
-            position: absolute;
-            width: 100%;
-            bottom: 0;
-        }
-
-        .loading-spinner {
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            display: none;
-        }
-
-    </style>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="script.css">
 </head>
 <body>
+    <header>
+        <h1>Anime Wallah</h1>
+        <p>Discover your favorite anime and download them!</p>
+    </header>
 
-<header>
-    <h1>Anime Wallah</h1>
-</header>
+    <div class="search-container">
+        <input type="text" id="anime-name" placeholder="Search for Anime...">
+        <button onclick="searchAnime()">Search</button>
+    </div>
 
-<div class="search-container">
-    <input type="text" id="anime-name" placeholder="Search for your favorite anime..." />
-    <button onclick="searchAnime()">Search</button>
-</div>
+    <div id="loading-spinner" class="loading-spinner">
+        <div class="loader"></div>
+    </div>
 
-<div id="loading-spinner" class="loading-spinner">
-    <div class="loader">Loading...</div>
-</div>
+    <div id="anime-details" class="anime-details"></div>
 
-<div class="anime-details" id="anime-details">
-    <!-- Anime details will be displayed here -->
-</div>
+    <footer>
+        <p>&copy; 2025 Anime Wallah | All Rights Reserved</p>
+    </footer>
 
-<footer>
-    <p>&copy; 2025 Anime Wallah. All rights reserved. Made with 💖 for anime lovers.</p>
-</footer>
-
-<script>
-    async function searchAnime() {
-        const animeName = document.getElementById("anime-name").value;
-        if (animeName === '') {
-            alert("Please enter an anime name!");
-            return;
-        }
-
-        // Show loading spinner while fetching data
-        document.getElementById("loading-spinner").style.display = 'block';
-
-        const response = await fetch(`https://api.jikan.moe/v4/anime?q=${animeName}&limit=5`);
-        const data = await response.json();
-        
-        document.getElementById("loading-spinner").style.display = 'none';
-
-        if (data.data.length > 0) {
-            displayAnimeDetails(data.data);
-        } else {
-            alert("Anime not found!");
-        }
-    }
-
-    function displayAnimeDetails(animes) {
-        const animeDetails = document.getElementById("anime-details");
-        animeDetails.innerHTML = '';
-
-        animes.forEach(anime => {
-            animeDetails.innerHTML += `
-                <div class="anime-card">
-                    <img src="${anime.images.jpg.large_image_url}" alt="${anime.title}">
-                    <h3>${anime.title}</h3>
-                    <p><strong>Episodes:</strong> ${anime.episodes ? anime.episodes : "N/A"}</p>
-                    <p><strong>Rating:</strong> ${anime.rating ? anime.rating : "N/A"}</p>
-                    <p><strong>Synopsis:</strong> ${anime.synopsis ? anime.synopsis : "No synopsis available."}</p>
-                    <button onclick="window.open('${anime.url}', '_blank')">View Details</button>
-                </div>
-            `;
-        });
-    }
-</script>
-
+    <script src="script.js"></script>
 </body>
 </html>
