--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 </head>
 <body>
     <header>
-        <h1>Anime Wallah</h1>
-        <p>Discover your favorite anime and download them!</p>
+        <div class="logo-container">
+            <h1>Anime Wallah</h1>
+            <p>Explore, Watch, and Download Anime</p>
+        </div>
     </header>
 
     <div class="search-container">
